[project]
name = "quantum-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "pylatexenc>=2.10",
    "python-dotenv>=1.2.1",
    "qiskit-ibm-runtime>=0.45.0",
]
